objects/OPT_Process_Request__c.object
<CustomObject>
    <fields>
        <fullName>Agreed_Deadline_Date__c</fullName>
        <label>Approved Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Organic_Process_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Production Manager Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Beta_Training_QA_Completed__c</fullName>
        <label>Beta Training &amp; QA Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Lead_Approval_Date__c</fullName>
        <label>Channel Lead Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved Channel Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Organic_Process_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Requested_By__c</fullName>
        <description>Channel that needs support</description>
        <label>Channel Requested By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SEO Mops</fullName>
                </value>
                <value>
                    <fullName>SEM Mops</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Product/Dev</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Lighthouse</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <formula>IF(
OR(
ISPICKVAL( Status__c ,"Closed - Completed"),
ISPICKVAL( Status__c ,"Closed - Denied"),
ISPICKVAL( Status__c ,"Closed - Review for OPT Plan")),
Today(),
null)</formula>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Communicated_to_Stakeholders__c</fullName>
        <label>Communicated to Stakeholders</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date_2__c</fullName>
        <description>Date on which Object was created.</description>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Completion_Date__c</fullName>
        <label>Desired Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documentation_Updated__c</fullName>
        <label>Documentation Updated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GA_Training_QA_Complete__c</fullName>
        <label>GA Training &amp; QA Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_Details__c</fullName>
        <label>Expected Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal of Process Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Efficiency</fullName>
                </value>
                <value>
                    <fullName>Account Performance</fullName>
                </value>
                <value>
                    <fullName>Unify Process</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_of_Process_Change__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_Pro_Communication_Complete__c</fullName>
        <label>Initial IT Pro Rollout &amp; QA Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Summary__c</fullName>
        <label>Implementation Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MOPS_OPT_Review_Meeting_Date__c</fullName>
        <label>Stakeholder Review Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <label>Meeting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Calendar_Updated__c</fullName>
        <label>SEO Prod - Process Audited &amp; Learned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Production_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Process_Updated__c</fullName>
        <label>Full IT Pro Rollout &amp; QA Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Details__c</fullName>
        <label>Request Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Task Process Change</fullName>
                </value>
                <value>
                    <fullName>New Task Process Change</fullName>
                </value>
                <value>
                    <fullName>Queue Logic Review</fullName>
                </value>
                <value>
                    <fullName>Process Failing Escalation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>New Task Request</fullName>
                </value>
                <value>
                    <fullName>Temporary Task Request</fullName>
                </value>
                <value>
                    <fullName>Current Process Failing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Roll_Out__c</fullName>
        <label>Requested Roll Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewed_Tested_By_Production__c</fullName>
        <label>Reviewed &amp; Tested By Production</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roll_Out_Date__c</fullName>
        <label>Roll Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SF_Report_Updates_Complete__c</fullName>
        <label>SF/Report Updates Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staffing_Cost_Evaluation_Completed__c</fullName>
        <label>Staffing/Cost Evaluation Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Channel Lead Approval</fullName>
                </value>
                <value>
                    <fullName>Channel Lead Approved - Pending OPT/MOPS Discussion</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed - Approval Denied</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending Production Manager</fullName>
                </value>
                <value>
                    <fullName>Pending Prioritization</fullName>
                </value>
                <value>
                    <fullName>Pending Stakeholder Sign Off</fullName>
                </value>
                <value>
                    <fullName>Pending Completion</fullName>
                </value>
                <value>
                    <fullName>Closed - Completed</fullName>
                </value>
                <value>
                    <fullName>Closed - Denied</fullName>
                </value>
                <value>
                    <fullName>Closed - Review for OPT Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teams_Impacted__c</fullName>
        <label>Teams Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CS Client Facing</fullName>
                </value>
                <value>
                    <fullName>CS Ops</fullName>
                </value>
                <value>
                    <fullName>IT Pro</fullName>
                </value>
                <value>
                    <fullName>Marketing Associates</fullName>
                </value>
                <value>
                    <fullName>Pin Collection</fullName>
                </value>
                <value>
                    <fullName>Quality Team</fullName>
                </value>
                <value>
                    <fullName>Rogers MOPs</fullName>
                </value>
                <value>
                    <fullName>SEO Mops</fullName>
                </value>
                <value>
                    <fullName>Web Dev</fullName>
                </value>
                <value>
                    <fullName>SEO Production</fullName>
                </value>
                <value>
                    <fullName>Lighthouse MA</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Config</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Process or support requests for OPT</description>
    <label>Production Request</label>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Production Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Rogers_Support_OPT_Process_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Rogers Support</label>
        <queue>Rogers_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Send_To_Rogers_OPT_Process_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Send To Rogers</label>
        <queue>Send_To_Rogers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Organic_Process_Request</fullName>
        <active>true</active>
        <label>Organic Process Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Production_Request</fullName>
        <active>true</active>
        <label>Production Request</label>
    </recordTypes>
    <validationRules>
        <fullName>Require_Goal_Details_if_Select_Other</fullName>
        <active>true</active>
        <description>Requires Goal Details to be filled out if Goal Of Process Change in Approval Section is Other</description>
        <errorConditionFormula>AND(
ISPICKVAL( Goal__c ,"Other"),
ISBLANK( Goal_Details__c )
)</errorConditionFormula>
        <errorDisplayField>Goal_Details__c</errorDisplayField>
        <errorMessage>If Goal of Process Change is "Other", you must complete the Goal Details section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Goal_and_Meeting_Date</fullName>
        <active>true</active>
        <description>Must fill out Approval Details - Goal of Process Change before moving to 'Channel Lead Approved - Pending OPT/MOPS Discussion'</description>
        <errorConditionFormula>AND(ISPICKVAL (Status__c ,"Channel Lead Approved - Pending OPT/MOPS Discussion"), 
ISPICKVAL(  Goal__c  ,"")
)</errorConditionFormula>
        <errorDisplayField>Goal__c</errorDisplayField>
        <errorMessage>Must fill out Goal of Process change when moving status to "Channel Lead Approved - Pending OPT/MOPS Discussion"</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Implementation_Details</fullName>
        <active>true</active>
        <description>Must fill out Implementation Details before moving to "Completed"</description>
        <errorConditionFormula>AND(ISPICKVAL (Status__c ,"Completed"), 
OR( 
ISNULL( Roll_Out_Date__c ), 
ISPICKVAL( Communicated_to_Stakeholders__c ,""), 
ISPICKVAL( Documentation_Updated__c ,""), 
ISPICKVAL( IT_Pro_Communication_Complete__c ,""), 
ISPICKVAL( Process_Calendar_Updated__c  ,""),
ISPICKVAL(   QA_Process_Updated__c  ,""),
ISNULL(  Implementation_Summary__c ))
)</errorConditionFormula>
        <errorMessage>Must fill out all Implementation Details before moving to Completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Roll_Out_Date_Goal</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL (Status__c ,"In Progress"),
OR(
ISNULL(  Agreed_Deadline_Date__c ),
ISPICKVAL( Goal__c ,""))
)</errorConditionFormula>
        <errorMessage>Must fill out Agreed Deadline Date &amp; Goal of Process Change when moving Status to In Progress.</errorMessage>
    </validationRules>
</CustomObject>